# chess-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLOUD_EVAL_DESIGN.md  CONTEXT.md  ENGINEERING_PASSES.md  FEATURES_DESIGN.md  GROUNDING_DESIGN.md  ILLUSTRATIVE_LINE_DESIGN.md  LICENSE  MCP_DESIGN.md  Makefile  PLUGIN_GATEWAY_DESIGN.md  PROJECT_REVIEW_PLAN.md  PROXY_DESIGN.md  README.md  REPERTOIRE_DESIGN.md  ROADMAP.md  ROADMAP_DESIGN.md  STRUCTURE_CLASSIFIER_DESIGN.md  TODO.md  compose.yml  ct-black-repertoire-analysis.md  ct-black-repertoire-retro.md  ct-black-repertoire.pgn  ct-white-repertoire-analysis.md  ct-white-repertoire-retro.md  ct-white-repertoire.pgn  english-opening-repertoire-analysis.md  english-opening-repertoire-retro.md  install.sh  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  review-findings.md  sample-game.pgn  sample-repertoire.pgn  smithery.yaml  tsconfig.base.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  deploy-ui.yml  release.yml
apps/mcp-server/: package.json
apps/ui/: index.html  package.json  playwright.config.ts  tsconfig.json  vite-plugin-mcp-bridge.ts  vite.config.ts
docs/: ARCHITECTURE.md  CONGRUENCE_V2_DESIGN.md  CONGRUENCE_V2_IMPLEMENTATION_PLAN.md  CONGRUENCE_V2_PROGRESS.md  COORDINATED_IMPLEMENTATION_WORKFLOW.md  PWA_PRODUCT.md  TODO.md  TOOL_CATALOG.md  TOOL_SURFACE_DISPOSITION.md  retro-2026-06-16.md  summary-2026-06-14.md
docs/archive/: CHAT_TOOLSET_REVIEW_HISTORY.md  ENGINEERING_PASSES_HISTORY.md  MCP_DESIGN_HISTORY.md  README.md  REPERTOIRE_DESIGN_HISTORY.md  UI_DESIGN_HISTORY.md
docs/design/: BATCH_REVIEW_DESIGN.md  CANONICAL_TOOL_CONTRACT.md  CHAT_REPERTOIRE_LINKING_DESIGN.md  CHAT_TOOLSET_REVIEW.md  CHAT_TREE_LINKS_DESIGN.md  ENGINE_MOVE_DESIGN.md  ENGINE_POOL.md  FEATURES_DESIGN.md  FIT_UNIFICATION_DESIGN.md  GAMES_API_DESIGN.md  GAP_FILL_PWA_DESIGN.md  GAP_RESOLUTION_DESIGN.md  GROUNDING_DESIGN.md  ILLUSTRATIVE_LINE_DESIGN.md  MCP_APP_DESIGN.md  MCP_DESIGN.md  PACKAGING_DESIGN.md  (+15 more)
evals/: build_openings.py  capture.py  measure.py  structure_accuracy.py
plugin/: .mcp.json
scripts/: docs-consistency.mjs  openrouter-tool-surface-eval.mjs  run-pass.sh  smoke-gametree.mjs  structure-accuracy.mjs  tool-catalog.mjs  tool-contract-inventory.mjs  tool-contract-semantics.mjs  workflow-guidance.mjs
server/: .dockerignore  Dockerfile  apiclient.py  chess-mcp.service  chess_files.py  chess_mcp.py  openings.py  pyproject.toml  repertoire.py  structure.py  test_chess_files.py  test_structure_repertoire.py  test_tools.py
server/src/chess_mcp/: __init__.py  __main__.py  apiclient.py  boardwidget.py  evalcache.py  files.py  openings.tsv  repertoire.py  server.py  structure.py
(+167 files in other folders)
