[project]
name = "chess-mcp"
version = "0.2.5"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.27.2",
    "chess>=1.11.2",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
addopts = "--cov=structure --cov=repertoire --cov=openings --cov=chess_mcp --cov-branch --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
