[project]
name = "chess-mcp"
version = "0.2.16"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.27.2",
    "chess>=1.11.2",
    "httpx>=0.27.1",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
addopts = "--cov=structure --cov=repertoire --cov=openings --cov=chess_mcp --cov=chess_files --cov=evalcache --cov=apiclient --cov-branch --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
