[project]
name = "chess-mcp"
version = "0.3.0"
description = "Grounded chess-analysis MCP server — Stockfish + python-chess: game review, repertoire tools, tablebase, cloud eval, board images."
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Antonio Zea" }]
keywords = ["chess", "mcp", "model-context-protocol", "stockfish", "analysis", "repertoire"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "mcp[cli]>=1.27.2",
    "chess>=1.11.2",
    "httpx>=0.27.1",
]

[project.urls]
Homepage = "https://github.com/Azeajr/chess-mcp"
Repository = "https://github.com/Azeajr/chess-mcp"
Issues = "https://github.com/Azeajr/chess-mcp/issues"

[project.scripts]
chess-mcp = "chess_mcp.server:main"
chess-files = "chess_mcp.files:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=chess_mcp --cov-branch --cov-report=term-missing"

[tool.ruff]
# Explicit so ruff resolves the Python target even when invoked from the repo root (the `make
# lint` target runs `ruff check server evals`). Without a [tool.ruff] table here, ruff skips this
# file's requires-python and assumes an old target, flagging 3.11+ builtins (BaseExceptionGroup,
# ExceptionGroup) as undefined names (F821).
target-version = "py314"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_mcp"]
